--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cubixkraft",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kartikay123.github.io/dfok6tmTs4FGobot",
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.6"
+    "@testing-library/jest-dom": "^6.1.6",
+    "gh-pages": "^6.1.1"
   }
 }
