--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cubixkraft",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kartikay123.github.io/dfok6tmTs4FGobot",
+  "homepage": "https://kartikay123.github.io",
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
